# pandora-matlab

./: .gitignore  .gitmodules  10617002.abf  10617003.abf  10617005.abf  10617008.abf  10617010.abf  10617013.abf  10617014.abf  10617015.abf  10617018.abf  10617019.abf  10617020.abf  10617024.abf  10617025.abf  10617030.abf  10617033.abf  10617034.abf  10617035.abf  10617037.abf  10617038.abf  10617039.abf  10617040.abf  10617042.abf  10617043.abf  10617044.abf  10617045.abf  10617046.abf  10617047.abf  10617048.abf  10617051.abf  10617053.abf  10617054.abf  10617055.abf  10617059.abf  10617061.abf  10617062.abf  10617065.abf  10617068.abf  10617071.abf  (+85 more)
@cip_trace/: get.m  (+31 more)
matlab/pan_fit/: Makefile.in  README.dist  configure  configure.ac  param_Re_Ce_cap_leak_act_int_t.m  param_act_deriv_ca_conc.m  param_cc_Rs_comp_int_t.m  param_tau_2sigmoids_v.m  param_tau_exp_v.m  param_tau_skewbell_v.m  param_vc_Rs_comp_int_t.m  test.m
matlab/pan_fit/@param_HH_chan_int_v/: convertTauFromSpline.m  param_HH_chan_int_v.m  plotInfs.m  plotTaus.m
matlab/pan_fit/@param_act/: param_act.m  set.m
matlab/pan_fit/@param_act_t/: param_act_t.m
matlab/pan_fit/@param_func/: display.m  displayXPP.m  f.m  get.m  getParam.m  getParams.m  getParamsStruct.m  minus.m  mtimes.m  param_func.m  selectFitParams.m  setVmName.m
matlab/pan_fit/@param_func_compiled/: f.m  param_func_compiled.m
matlab/pan_fit/@param_mult/: fHandle.m  get.m  getParamNames.m  selectFitParams.m  setFunc.m  setParams.m  setVmName.m
matlab/pan_fit/@param_spline_func/: get.m
matlab/pan_fit/@param_tau_v/: param_tau_v.m
(+1996 files in other folders)
