# Process this file with autoconf 2.0 or later to make a configure script.
# Process it every time the version number is incremented.

# pandora autoconf file.
# Cengiz Gunay 2008-08-08

# $Id: configure.ac 8 2007-07-18 22:55:43Z cengiz $

# Basic stuff
AC_REVISION([$Revision: 8 $])
AC_PREREQ(2.60)
AC_INIT(pandora, 1.3a, [cengique@users.sf.net], pandora)

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
