# Process this file with autoconf 2.0 or later to make a configure script.
# Process it every time the version number is incremented.

# param_fitter autoconf file.
# Cengiz Gunay 2012-07-06

# $Id: configure.ac 8 2007-07-18 22:55:43Z cengiz $

# Basic stuff
AC_REVISION([$Revision: 8 $])
AC_PREREQ(2.60)
AC_INIT(param_fitter, 1.0b, [cengique@users.sf.net], param_fitter)

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
